= master

* Deprecate the view_subdirs plugin alias for the view_options plugin (jeremyevans)

* Deprecate Stream#callback in the streaming plugin (jeremyevans)

* Deprecate the automatic support for EventMachine in the streaming plugin (jeremyevans)

* Deprecate static_path_info plugin, which has been a no-op in Roda 2 (jeremyevans)

* Deprecate render plugin :escape option loading Erubis escaping support (jeremyevans)

* Deprecate the per_thread_caching plugin (jeremyevans)

* Deprecate the websockets plugin (jeremyevans)

* Deprecate treating unsupported matchers as always matching (jeremyevans)

* Deprecate ignoring unsupported match block return values (jeremyevans)

* Deprecate the :format, :opt, and :optd default symbol matchers in the symbol_matchers plugin (jeremyevans)

* Deprecate use of placeholders in string matchers by default, add placeholder_string_matchers plugin for it (jeremyevans)

= 2.28.0 (2017-07-14)

* Deprecate unneeded internal constants (jeremyevans)

* Optimize for ruby 2.3+ using frozen string literals instead of constants (jeremyevans)

* Move 303 default redirect status from sinatra_helpers to status_303 plugin, so it can be loaded separately (plujon) (#122)

= 2.27.0 (2017-06-14)

* Add class_matchers plugin for matching other classes (in addition to String/Integer), with user specified regexps and type conversion (jeremyevans)

* Support String class matcher for non-empty segments, same behavior as symbol matchers but more intuitive and DRY (jeremyevans)

* Support Integer class matcher for \d+ segments, yielding matched values as integers (jeremyevans)

= 2.26.0 (2017-05-16)

* Support :skip_middleware option to csrf plugin to add only the methods and not add the middleware (luciusgone) (#118)

* Handle multiple types with matching suffixes in the type_routing plugin (e.g. tar.gz and gz) (tomdalling) (#117)

= 2.25.0 (2017-04-18)
