@@ -50,7 +50,7 @@ describe "render plugin" do
     body("/inline").strip.must_equal "Hello <%= name %>"
   end
 
-  it "with str as ext" do
+  deprecated "with str as ext" do
     app.plugin :render, :ext => "str"
     body("/about").strip.must_equal "<h1>About Roda</h1>"
     body("/home").strip.must_equal "<title>Roda: Home</title>\n<h1>Home</h1>\n<p>Hello Agent Smith</p>"
